# 최소 cmake 3.13 버전 ???? ??
cmake_minimum_required(VERSION 3.13)



# ?? ??
set(PROJECT_NAME opengl_example)  # CMake Project ??
set(CMAKE_CXX_STANDARD 17)        # C++ 버전 ??



# ??? ??? ??? ?? ??
set(WINDOW_NAME "OpenGL Example") # ??? ? ??
set(WINDOW_WIDTH 960)             # ??? ??
set(WINDOW_HEIGHT 540)            # ??? ??



# CMake Project ?? ??
project(${PROJECT_NAME})



#[[
    EXE ?? ??? ???? ??
    ?? ?????? 컴파? => 빌드 => ????? 만든?
    ????? 만드? ? ??? 모든 ???? ????
]]#
add_executable(
    ${PROJECT_NAME}                               # Project ?름과 ??? ????? ??
    src/main.cpp

    src/common.cpp              src/common.h

    src/shader.cpp              src/shader.h
    src/program.cpp             src/program.h

    src/buffer.cpp              src/buffer.h
    src/vertex_layout.cpp       src/vertex_layout.h

    src/image.cpp               src/image.h
    src/texture.cpp             src/texture.h

    src/context.cpp             src/context.h
    
    src/mesh.cpp                src/mesh.h
    src/model.cpp               src/model.h

    src/framebuffer.cpp         src/framebuffer.h

    src/Player.cpp              src/Player.h
    src/Camera.cpp              src/Camera.h
    src/Floor.cpp               src/Floor.h
)



# ?? ??브버리?? ???? Custom Module ? ??
include(Dependency.cmake)



#[[
    ?로젝? ? ?????? ?? ??브러리의 ??? ??? ? ??? ??
    
    ?? ??브러리의 ?? ??? ?? => ?? ??? 컴파?
    => ?? ??브러리?? ?? ??? 링크

    ${DEP_INCLUDE_DIR} = ./install/include
    ?? ???리?? ?? ?? = Target ? ???켜서
    => ?? ???? ?? ??? ?근할 ? ??? ??
]]#
target_include_directories(${PROJECT_NAME} PUBLIC ${DEP_INCLUDE_DIR})



#[[
    ${DEP_LIB_DIR} = ./install/lib = ?? ??브버리?? ????? ????
    ?? ??? 링크 ?계에?, ?? ???리?? 참고??? ??
]]#
target_link_directories(${PROJECT_NAME} PUBLIC ${DEP_LIB_DIR})



# ?? ??? ?? ?? ??브러리?? link => Linking 과정 ??
target_link_libraries(${PROJECT_NAME} PUBLIC ${DEP_LIBS})



#[[
    main.cpp ?? 컴파?? ? ? ??? ? ?? 매크?
    #define ? ???? 바깥?? ???? ??

    ?????? CMakeLists ?? ??? ??? ??? ? ?? ??
]]#
target_compile_definitions(
    ${PROJECT_NAME}
    PUBLIC
    WINDOW_NAME="${WINDOW_NAME}"
    WINDOW_WIDTH=${WINDOW_WIDTH}
    WINDOW_HEIGHT=${WINDOW_HEIGHT}
)



#[[
    Target 간의 Dependency ? ???? ??
        ?? ?구에? ?존하? ?? ??
        ${DEP_LIST} = ?? ??브러? ??? ?름들? list
    
    ?? ??? ?? ??브러리에 ?존하? ????
    ?로젝?? 컴파? ?? ??, Dependency?? 먼?? build ? ? ?? ??

    ??브러리?? 먼?? build ?? .lib ??? ???? => ? ?로젝?? ?? 링크? ? ??
    ??? ??브러리?? 구성?? ?? obj files => ??? 묶으? => lib file

    ?? ?로젝?? 컴파? ? ?, ??브러리?? 링크~
    ?? ??브러? 리스?? ?? 빌드 ?? ?? ?? ??브러리들? ??? ? ??
]]#
add_dependencies(${PROJECT_NAME} ${DEP_LIST})